Tweak to fullscreen mode scroll to top and resize placeholder element to avoid fullscreen app being slightly offscreen when maximising from scrolled position switch to alternate cog icon

--- a/ui/app.css
+++ b/ui/app.css
@@ -1,5 +1,5 @@
 .configureIcon {
-     background-image:url(cog_16x16.png);
+     background-image:url(cog_alt_16x16.png);
 }
 .fullscreenIcon {
     background-image:url(fullscreen_16x16.png);
